--- a/package.json
+++ b/package.json
@@ -2,28 +2,33 @@
   "name": "power-crypt",
   "version": "0.1.4",
   "description": "",
-  "main": "./dist/index.js",
-  "jsnext:main": "./jsnext.js",
   "scripts": {
-    "test": "nyc mocha test/*.js --color always"
+    "build": "upbin tsc --declaration",
+    "test": "nyc mocha --require ts-node/register 'test/**/*.ts' --color always",
+    "ci-test": "yarn test"
   },
   "devDependencies": {
-    "babel-register": "^6.24.1",
     "mocha": "^5.0.5",
     "nyc": "^11.6.0",
-    "power-assert": "^1.4.4"
+    "power-assert": "^1.4.4",
+    "prettier": "^1.17.0",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.4"
   },
   "files": [
-    "src",
-    "dist",
-    "package.json",
-    "jsnext.js",
+    "lib",
     "LICENSE",
     "README.md"
   ],
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "author": "Shin Suzuki <shinout310@gmail.com>",
-  "repository": "https://github.com/phenyl-js/phenyl/tree/master/modules/power-crypt",
-  "license": "Apache License 2.0",
+  "repository": "https://github.com/phenyl-js/power-crypt",
+  "license": "Apache-2.0",
+  "contributors": [
+    "Jesse Katsumata <jesse.katsumata@gmail.com>",
+    "Daiki Ihara <sasurau4@gmail.com>"
+  ],
   "dependencies": {
     "buffer": "^5.1.0",
     "sha.js": "^2.4.8"
