--- a/package.json
+++ b/package.json
@@ -2,19 +2,13 @@
   "name": "power-crypt",
   "version": "0.1.4",
   "description": "",
-  "scripts": {
-    "build": "upbin tsc --declaration",
-    "test": "nyc mocha --require ts-node/register 'test/**/*.ts' --color always",
-    "ci-test": "yarn test"
-  },
-  "devDependencies": {
-    "mocha": "^5.0.5",
-    "nyc": "^11.6.0",
-    "power-assert": "^1.4.4",
-    "prettier": "^1.17.0",
-    "ts-node": "^8.1.0",
-    "typescript": "^3.4.4"
-  },
+  "repository": "https://github.com/phenyl-js/power-crypt",
+  "license": "Apache-2.0",
+  "author": "Shin Suzuki <shinout310@gmail.com>",
+  "contributors": [
+    "Jesse Katsumata <jesse.katsumata@gmail.com>",
+    "Daiki Ihara <sasurau4@gmail.com>"
+  ],
   "files": [
     "lib",
     "LICENSE",
@@ -22,15 +16,24 @@
   ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "author": "Shin Suzuki <shinout310@gmail.com>",
-  "repository": "https://github.com/phenyl-js/power-crypt",
-  "license": "Apache-2.0",
-  "contributors": [
-    "Jesse Katsumata <jesse.katsumata@gmail.com>",
-    "Daiki Ihara <sasurau4@gmail.com>"
-  ],
+  "scripts": {
+    "build": "upbin tsc --declaration",
+    "ci-test": "yarn test",
+    "test": "nyc mocha --require ts-node/register 'test/**/*.ts' --color always"
+  },
   "dependencies": {
     "buffer": "^5.1.0",
     "sha.js": "^2.4.8"
+  },
+  "devDependencies": {
+    "@types/mocha": "^5.2.6",
+    "@types/power-assert": "^1.5.0",
+    "@types/sha.js": "^2.4.0",
+    "mocha": "^5.0.5",
+    "nyc": "^11.6.0",
+    "power-assert": "^1.4.4",
+    "prettier": "^1.17.0",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.4"
   }
 }
